tests/disallow-privileged/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27.3
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-privileged
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27.3
      securityContext:
        privileged: true
