tests/disallow-privileged/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privileged-test
policies:
  - ../../policies/disallow-privileged.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-privileged
    rule: no-privileged-containers
    kind: Pod
    resources:
      - good-pod
    result: pass
  - policy: disallow-privileged
    rule: no-privileged-containers
    kind: Pod
    resources:
      - bad-pod-privileged
    result: fail
